Redirección con Zuul para Microservicio Usuarios

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,10 @@ zuul:
   routes:
     obra:
       path: /obra/**
-      url: https://dan-usuarios-staging.herokuapp.com/api/obra
+      url: http://dan-usuarios-staging.herokuapp.com/api/obra
     cliente:
       path: /cliente/**
-      url: https://dan-usuarios-staging.herokuapp.com/api/cliente
+      url: http://dan-usuarios-staging.herokuapp.com/api/cliente
     empleado:
       path: /empleado/**
-      url: https://dan-usuarios-staging.herokuapp.com/api/empleado
-
-eureka:
-  client:
-    enabled: false
+      url: http://dan-usuarios-staging.herokuapp.com/api/empleado
