--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ zuul:
       url: http://dan-usuarios-staging.herokuapp.com/api/empleado
     pago:
       path: /pago/**
-      url: https://dan-dot-pagos-staging.herokuapp.com/api/pago
+      url: http://dan-dot-pagos-staging.herokuapp.com/api/pago
     pedido:
       path: /pedido/**
-      url: https://dan-dot-pedidos-staging.herokuapp.com/api/pedido
+      url: http://dan-dot-pedidos-staging.herokuapp.com/api/pedido
 
